# nest-evaluation-framework

./: .gitignore  AGENTS.md  PLANNING.md  PRD.md  README.md  SESSION_LOG.md  TASKS.md  build-kickoff-prompt.md  pyproject.toml
.github/workflows/: ci.yml  spec-blind-review.yml
docs/: cross-artifact-analysis.md  evidence-layout.md  public-interfaces.md  research-register.md  retention-contract.md  source-availability-matrix.md  target-capability-profile.md  trust-model.md
prompts/: spec-blind-review.md
scripts/: spec_blind_review.py
specs/: HANDOFF.md  clarifications.md
specs/.specify/memory/: constitution.md
specs/001-framework-contracts/: spec.md
specs/001-framework-contracts/contracts/: campaign-request.schema.json  campaign-result.schema.json  disposition.schema.json  evidence-manifest.schema.json  finding.schema.json  target-capability-manifest.schema.json  target-descriptor.schema.json  target-snapshot-manifest.schema.json
specs/002-target-integrity/: spec.md
specs/003-mutation-campaign/: spec.md
specs/004-property-fuzz-campaign/: spec.md
specs/005-performance-campaign/: spec.md
specs/006-adversarial-model-audit/: spec.md
src/nef/: __init__.py  __main__.py  cli.py
src/nef/contracts/: __init__.py  base.py  campaign.py  (+5 more)
tests/: campaign_conformance.py  contract_fixtures.py  test_aggregation.py  test_campaign_interface.py  test_cli.py  test_contract_models.py  test_ed25519_rfc8032.py  test_evidence_cli.py  test_evidence_store.py  test_package_layout.py  test_schema_conformance.py  test_spec_blind_review.py  test_target_pinning_schemas.py
(+8 files in other folders)
